; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/p/extr_asm_malbolge.c_mal_dis.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/p/extr_asm_malbolge.c_mal_dis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"jmp [d]\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"out a\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"in a\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"rotr [d], mov a, [d]\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"mov d, [d]\00", align 1
@.str.5 = private unnamed_addr constant [23 x i8] c"crz [d], a, mov a, [d]\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"end\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"nop\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32*, i32)* @mal_dis to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mal_dis(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %25

10:                                               ; preds = %3
  %11 = load i32*, i32** %6, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %5, align 4
  %15 = add nsw i32 %13, %14
  %16 = srem i32 %15, 94
  switch i32 %16, label %24 [
    i32 4, label %17
    i32 5, label %18
    i32 23, label %19
    i32 39, label %20
    i32 40, label %21
    i32 62, label %22
    i32 81, label %23
  ]

17:                                               ; preds = %10
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  br label %26

18:                                               ; preds = %10
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %4, align 8
  br label %26

19:                                               ; preds = %10
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8** %4, align 8
  br label %26

20:                                               ; preds = %10
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0), i8** %4, align 8
  br label %26

21:                                               ; preds = %10
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i8** %4, align 8
  br label %26

22:                                               ; preds = %10
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.5, i64 0, i64 0), i8** %4, align 8
  br label %26

23:                                               ; preds = %10
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8** %4, align 8
  br label %26

24:                                               ; preds = %10
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0), i8** %4, align 8
  br label %26

25:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %26

26:                                               ; preds = %25, %24, %23, %22, %21, %20, %19, %18, %17
  %27 = load i8*, i8** %4, align 8
  ret i8* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
